--- a/srcproj/css/index.css
+++ b/srcproj/css/index.css
@@ -1,7 +1,15 @@
+/* Classes gerais */
 body{
     width: 100%;
     margin: 0;
 }
+h1,h2,h3,h4,h5,h6 {
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: capitalize;
+    padding: 0;
+    margin: 0;
+}
+/* -------------- */
 /* Header CSS */
 #header{
     width: 100%;
@@ -89,5 +97,39 @@ body{
 
 
 /* footer */
-
+footer{
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+.ava{
+    text-align: center;
+    background-color: #f2f0e9;
+    width: 100%;
+    position: relative
+}
+.ava-content{
+    width: 100%;
+}
+.ava .ava-content h2{
+    padding-top: 30px;
+    text-transform: none;
+}
+.ava .ava-content .but{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 15px 50px 15px 50px;
+    text-decoration: none;
+    text-transform: capitalize;
+    background-color: black;
+    border-radius: 150px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    border: 1px solid transparent;
+}
+.ava .ava-content .but:hover{
+    color: black;
+    background-color: white;
+    border: 1px solid black;
+}
 /* ------ */
