--- a/srcproj/css/index.css
+++ b/srcproj/css/index.css
@@ -97,6 +97,8 @@ h1,h2,h3,h4,h5,h6 {
 
 
 /* footer */
+
+/* ava */
 footer{
     bottom: 0;
     left: 0;
@@ -125,6 +127,7 @@ footer{
     border-radius: 150px;
     margin-top: 20px;
     margin-bottom: 30px;
+    font-size: 17px;
     border: 1px solid transparent;
 }
 .ava .ava-content .but:hover{
@@ -132,4 +135,31 @@ footer{
     background-color: white;
     border: 1px solid black;
 }
+/* --- */
+
+/* footer bottom */
+.footer-container{
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.footer-bottom{
+    background-color: black;
+    padding-top: 4px;
+}
+.left-f img{
+    margin:20px 0 20px 0; 
+}
+.lista-footer li{
+    color: white;
+    border-bottom: 1px solid transparent;
+    list-style: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    padding: 10px 0 10px 0;
+}
+.lista-footer li:hover{
+    border-color: white;
+}
+/* ------------- */
+
 /* ------ */
