--- a/srcproj/css/form.css
+++ b/srcproj/css/form.css
@@ -1,1 +1,18 @@
 /* Container */
+.container{
+    text-align: center;
+}
+form{
+    display: inline-block;
+    margin:50px 0 50px 0;
+}
+form h2,form h3,form h4{
+    text-transform: none;
+}
+form h3{
+    margin-top: 10px;
+}
+.title-area{
+    text-align: left;
+}
+
