--- a/srcproj/css/header-footer.css
+++ b/srcproj/css/header-footer.css
@@ -10,7 +10,7 @@ h1,h2,h3,h4,h5,h6 {
     margin: 0;
 }
 .container{
-    min-height: 300px;
+    min-height: 99px;
     padding-top: 100px;
 }
 /* -------------- */
@@ -22,6 +22,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 .upper{
     background-color: black;
+    border-bottom: 1px solid white;
 }
 .right-header,.left-header{
     display: inline-block;
@@ -65,7 +66,6 @@ h1,h2,h3,h4,h5,h6 {
 .submenus{
     width: 100%;
     background-color: black;
-    margin-top: 0.5px;
     text-align: center;
 }
 .ul-sub{
