--- a/srcproj/css/index.css
+++ b/srcproj/css/index.css
@@ -23,7 +23,7 @@
 .li-title{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    color: black;
+    color: #1c1c1c;
     font-size: 50px;
 }
 .regular-li a{
