--- a/srcproj/css/detalhe.css
+++ b/srcproj/css/detalhe.css
@@ -1,31 +1,27 @@
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
-  margin: auto;
-  text-align: center;
-  font-family: arial;
-  padding-top: 10px;
-  color: grey;
+.text-holder,.img-holder{
+  display: inline-block;
+  vertical-align: top;
 }
-
-.price {
-  color:black;
-  padding-top: 1px;
-  font-size: 22px;
+.card{
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
-
-.card button {
-  border: none;
-  outline: 0;
-  padding: 12px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
+.img-holder img{
+  max-width: 200px;
+  max-height: 300px;
   width: 100%;
-  font-size: 18px;
+}
+.text-holder{
+  margin: 20px 0 0 15px;
+}
+#name{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  padding-bottom: 10px;
+}
+#price,#size,#sexo{
+  padding-top: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
 }
 
-.card button:hover {
-  opacity: 0.7;
-}
