--- a/srcproj/css/index.css
+++ b/srcproj/css/index.css
@@ -14,3 +14,67 @@
 .container{
     padding-top: 0 ;
 }
+.wrapper1 .row{
+    text-align: center;
+}
+.list-gender{
+    padding: 0;
+}
+.li-title{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: #1c1c1c;
+    font-size: 50px;
+}
+.regular-li a{
+    color: black;
+    font-size: 20px;  
+}
+.regular-li{
+    padding-bottom: 25px;
+}
+.title-about{
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+}
+.waper-horario{
+    text-align: center;
+}
+.waper-horario table{
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+.waper-horario table,.waper-horario table tr,.waper-horario table td,.waper-horario table th{
+    border: 1px solid black;
+}
+.waper-horario table th{
+    text-align: center;
+}
+.waper-horario table td{
+    padding: 5px;
+}
+.sep{
+    padding:10px 0 10px 0;
+    background-color: black;
+    margin-left: -100%;
+    margin-right: -100%;
+}
+.sep h2{
+    color: white;
+    text-align: center;
+}
+.title{
+    background-color: black;
+    margin-left: -100%;
+    margin-right: -100%;
+}
+
+.AboutUs{
+    font-size: 20px;
+    padding-top: 30px;
+}
