--- a/srcproj/css/listagem.css
+++ b/srcproj/css/listagem.css
@@ -52,3 +52,67 @@
 #notFound{
   display: none;
 }
+.btn-primary{
+  background-color: black;
+  border-radius: 20px;
+  outline: none;
+}
+.btn-primary:hover{
+  color: black;
+  background-color: white;
+}
+.mastercontainer-filros{
+  margin-top: 10px;
+  text-align: center;
+  position: relative;
+}
+.filclick{
+  color: black;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  border: 2px solid black;
+  padding: 3px 35px 3px 15px ;
+  position: relative;
+}
+.filclick:hover{
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+.filclick::after{
+  content: '';
+  background: url(../img/filterico.png)no-repeat center;
+  background-size: 17px;
+  display: block;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  top: calc(50% + -8px);
+  right: 10px;
+}
+#filtro1{
+  margin-right: 10px;
+}
+#filtro1,#filtro2{
+  display: inline-block;
+}
+.filclick{
+  float: right;
+  position: relative;
+  vertical-align: middle;
+}
+.fil-tip{
+  float: left;
+  position: relative;
+  vertical-align: middle;
+}
+.fil-tip p{
+  margin: 0;
+  line-height: 31px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+}
+.edit-bold{
+  font-weight: 700;
+}
