--- a/srcproj/css/detalhe.css
+++ b/srcproj/css/detalhe.css
@@ -13,6 +13,7 @@
 }
 .text-holder{
   margin: 20px 0 0 15px;
+  max-width: 800px;
 }
 #name{
   font-family: Arial, Helvetica, sans-serif;
@@ -24,4 +25,17 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
 }
+.filter-g-item:hover
+{
+    cursor: pointer;
+}
 
+.left-header{
+    cursor: pointer;
+}
+.sub-items{
+    cursor: pointer;
+}
+.regular-li{
+    cursor: pointer;
+}
