--- a/srcproj/css/header-footer.css
+++ b/srcproj/css/header-footer.css
@@ -183,6 +183,9 @@ footer{
     font-size: 11px;
     padding: 10px 0 10px 30px;
 }
+.but-holder{
+    padding: 30px 0 30px 0;
+}
 /* ------ */
 
 /* Container */
