--- a/srcproj/css/form.css
+++ b/srcproj/css/form.css
@@ -76,3 +76,11 @@ form input{
 .regular-li{
     cursor: pointer;
 }
+@media only screen and (max-width: 768px) {
+    .title-area h2{
+        font-size: 20px;
+    }
+    .title-area h3{
+        font-size: 15px;
+    }
+}
