--- a/srcproj/css/detalhe.css
+++ b/srcproj/css/detalhe.css
@@ -12,7 +12,7 @@
   width: 100%;
 }
 .text-holder{
-  margin: 20px 0 0 15px;
+  margin: -8px 0 0 15px;
   max-width: 800px;
 }
 #name{
@@ -45,6 +45,7 @@
   }
   .text-holder{
     margin-left: 0;
+    margin-top: 10px;
   }
   #name{
     font-size: 20px;
