--- a/srcproj/css/header-footer.css
+++ b/srcproj/css/header-footer.css
@@ -4,6 +4,7 @@ body{
     margin: 0;
     background-color: white;
     background: url("../img/bkg.jpg")no-repeat fixed;
+    overflow-x: hidden; 
 }
 h1,h2,h3,h4,h5,h6 {
     font-family: Arial, Helvetica, sans-serif;
