--- a/srcproj/css/header-footer.css
+++ b/srcproj/css/header-footer.css
@@ -66,6 +66,10 @@ h1,h2,h3,h4,h5,h6 {
 .filter-g-item.sel .main-h{
     text-decoration: underline;
 }
+.main-h:hover{
+    cursor: pointer;
+
+}
 /* submenus */
 .submenus{
     width: 100%;
@@ -82,6 +86,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 .ul-sub li:hover{
     background-color: white;
+    cursor: pointer;
 }
 .ul-sub li:hover .a-col{
     color: black;
